# terminusgps-payments

./: .gitignore  README.md  package-lock.json  pyproject.toml  runtests.py
.github/workflows/: django-test.yaml
src/: settings.py  urls.py
terminusgps_payments/: admin.py  apps.py  fields.py  forms.py  managers.py  mixins.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
terminusgps_payments/fixtures/terminusgps_payments/tests/: test_cartitems.json  (+7 more)
terminusgps_payments/migrations/: 0001_initial.py  0002_addressprofile_address_paymentprofile_address_and_more.py  0002_alter_customeraddressprofile_address_and_more.py  0002_alter_customeraddressprofile_id_and_more.py  0002_alter_customerprofile_user.py  0002_customerprofile_user.py  0002_subscription_expires_on.py  0002_subscriptionschedule_subscriptionscheduleinterval_and_more.py  0003_alter_paymentprofile_options_subscription_amount_and_more.py  0003_alter_subscription_amount_and_more.py  0003_alter_subscription_status.py  0004_remove_subscriptionschedule_interval_and_more.py  0004_subscription_amount.py  0005_subscription.py
terminusgps_payments/models/: __init__.py  address_profiles.py  base.py  customer_profiles.py  fields.py  managers.py  payment_profiles.py  subscriptions.py
terminusgps_payments/templates/terminusgps_payments/: account.html  add_bank_account.html  add_credit_card.html  customeraddressprofile_create.html  customeraddressprofile_delete.html  customeraddressprofile_detail.html  customeraddressprofile_list.html  customerpaymentprofile_create.html  customerpaymentprofile_detail.html  customerpaymentprofile_list.html  customerprofile_detail.html  layout.html  subscription_cancel.html  subscription_create.html  subscription_delete.html  subscription_detail.html  subscription_update.html  subscriptionplan_detail.html
terminusgps_payments/templatetags/: payment_icons.py
terminusgps_payments/tests/: test_forms.py  test_mixins.py  test_models.py  test_services.py  test_views.py
terminusgps_payments/views/: __init__.py  address_profiles.py  customer_profiles.py  customers.py  generic.py  main.py  mixins.py  payment_profiles.py  subscriptions.py
tests/: test_forms.py  test_mixins.py  test_models.py  test_views.py
(+47 files in other folders)
